--- a/rupnik2015.tex
+++ b/rupnik2015.tex
@@ -20,13 +20,14 @@
 \newcommand{\algInput}{\textbf{input:}}
 
 \jairheading{x}{xxxx}{x-xx}{x/xx}{x/xx}
-\ShortHeadings{Cross-lingeringual Document Similarity and Event Detection}
+\ShortHeadings{Cross-Lingual Document Similarity and Event Tracking}
 {Rupnik, Muhi\v{c}, Leban, Fortuna, \v{S}kraba \& Grobelnik}
 \firstpageno{1}
 
 \begin{document}
 
-\title{Cross-lingual Document Similarity and Event Detection \todo{Better title...}}
+\title{Event Tracking Across Languages - 
+Cross-Lngual Document Similarity and Event Tracking \todo{Better title...}}
 
 \author{\name Jan Rupnik \email jan.rupnik@ijs.si \\
        \name Andrej Muhi\v{c} \email andrej.muhic@ijs.si \\
@@ -64,6 +65,27 @@ The story:
 \item We present an approach to tackle this problem using a combination of techniques....
 \item Ultimately we present a tool showing the feasibility of our approach
 \end{itemize}
+
+\section{Introduction}
+
+Content on the internet is becoming increasingly multi-lingual. A prime example is Wikipedia - in 2001 the majority of pages were written in English, while in 2012, the percentage of English articles has dropped to 14\%. Machine translation remains relatively rudimentary - allowing people to understand simple phrases on we pages, but remain inadequate for more advanced understanding of text. At the same time, online news has begun to dominate reporting of current events. In this paper we consider the intersection of these developments: how to track events which are reported about in multiple languages. 
+
+The term event is vague and ambiguous, but for the practical purposes we define it as ``any significant happening that is being reported about in the media''. Examples of events would include shooting down of the Malaysia Airlines plane over Ukraine on July 18th, 2014 and HSBC's admittance of aiding their clients in tax evasion on February 9th, 2015. Events such as these are covered by many articles and the question is how to find all the articles in different languages that are describing a single event.
+
+As input we consider a stream of articles in different languages and a list of events. Our goal is to assign articles to their corresponding events. A priori we do not know the coverage of the articles, that is not all the events may be covered and we do not know that all the articles necessarily fit into one of the events.  To achieve our goal, we divide the task into two parts: clustering the articles according to topic (regardless of language) and matching the clusters to events. 
+
+To cluster the articles, rather than rely on machine translations, we adopt well-established monolingual text mining tools to the multilingual setting. This represents the continuation of previous work \cite{nips, iti, nips2, sikdd} where we explored representations of documents which were valid over multiple languages.  The representations could be interpreted as multi-lingual topics, which were then used as proxies to compute cross-lingual similarities between documents. To learn the representations, we use Wikipedia as a training corpus. SIgnificantly, we do not only consider the major or \emph{hub} languages such as English, German, French, etc. which have significant overlap in article coverage, but also smaller languages (in terms of number of Wikipedia articles) such as Slovenian and Hindi, which may have a negligible overlap in article coverage. We can then define a similarity between any two articles regardless of language,  which allows us to cluster the articles according to topic. The underlying assumption being that articles describing the same event are similar  and will therefore be put into the same cluster.
+
+The second step is to match our computed clusters to events. Since our similarity measure and clustering 
+may not be perfect, we need to find the ``best" correspondence between clusters and events. In this paper, we test several different algorithms for both steps for perfomance in an integrated system. In particular, we test our approach within an online system for detection of world events, called Event Registry\cite{}. Event Registry is a repository of events, where events are automatically identified by analyzing news articles. 
+
+Event Registry works by collecting and analyzing news articles that are published by news outlets in different languages all over the world. Collected articles are first semantically annotated by identifying in them mentions of relevant concepts -- either entities or important keywords. The disambiguated and entity linking of the concepts is done using Wikipedia as the main knowledge base. 
+   The key step in Event Registry is then to apply an online clustering algorithm on the articles in order to identify groups of articles that are discussing the same event. 
+   
+   Within this system, we test our multilingual similarity measures as well as our algorithms for matching clusters to events.  The result is that we can test total performance in a multilingual, real-world setting.
+
+The paper is organized as follows: we first provide an overview of the system as a whole (Section ), followd by details on each of the two steps described above. We first introduce several approaches to measures of cross-lingual similarity (Section ) and then the algorithms for matching clusters to events.  To improve readability, we describe relevant related work for each module in its corresponding Section.
+Finally, we present and interpret the experimental results and finally give conclusions and describe promising future directions. 
 
 \section{Introduction}
 
