--- a/rupnik2015.tex
+++ b/rupnik2015.tex
@@ -89,8 +89,7 @@ Finally, we present and interpret the experimental results and finally give conc
 
 \section{System Overview}
 
-Event registry -> Monolingual events
-Events -> features (semantic + CCA) -> linked events
+Event registry $\Rightarrow$ Monolingual events $\Rightarrow$ features (semantic + CCA) $\Rightarrow$ linked events (crosslingual)
 
 
 \section{Cross-lingual Document Similarity}
