Adds some material. Rough working outline of assigned work to Andrej.

--- a/rupnik2015.tex
+++ b/rupnik2015.tex
@@ -1,5 +1,6 @@
 \documentclass[twoside,11pt]{article}
 \usepackage{jair, theapa, rawfonts}
+\usepackage{graphicx}
 
 \usepackage{color}
 \newcommand{\todo}[1]{\textcolor{red}{TODO: #1}}
@@ -360,6 +361,7 @@ Using the described features and the user-provided label we can train a classifi
 We describe the datasets involved in the experiments and two evaluations: comparing the crosslingual approaches on an information retrieval task, and evaluation of cross-lingual event linking.
 
 \subsection{Datasets}
+\emph{Andrej started shuffling it, will do it till Monday :) }
 
 {\oldText{Taken from ITI paper}
 To investigate the empirical performance of the low rank approximations we will test the algorithms on a large-scale, real-world multilingual dataset that we extracted from Wikipedia by using inter-language links as an alignment. This  results in a large number of weakly comparable documents in more than $200$ languages. Wikipedia is a large source of multilingual data that is especially important for the languages for which no translation tools, multilingual dictionaries as Eurovoc, or strongly aligned multilingual corpora as Europarl are available. Documents in different languages are related with so called 'inter-language' links that can be found on the left of the Wikipedia page. The Wikipedia is constantly growing. There are currently four Wikipedias with more than $10^6$ articles, $40$ with more than $10^5$ articles, $100$ with more than $10^4$ articles, and $216$ with more than $1000$ articles. Wikipedia uses special user-friendly markup language that is very easy to write but very hard to parse. Simplicity of language can cause ambiguities and moreover it is constantly changing. For example, separator | can be used in different contexts.
@@ -374,7 +376,7 @@ We get inter-language link matrix using previously stored redirection links and 
 Mate retrieval results
 
 \subsection{Experiments With Missing Alignment Data}
-
+\emph{Andrej started working on this, done by Monday}
 {\oldText{Taken from XLite paper}
 To investigate the empirical performance of our algorithm we will test it on a large-scale, real-world multilingual dataset that we extracted from Wikipedia  by  using so called 'inter-language' links as an alignment. We select a subset of Wikipedia languages containing three major languages, English--\emph{en} (hub language), Spanish--\emph{es}, Russian--\emph{ru}, and five minority (in the sense of Wikipedia sizes) languages, Slovenian--\emph{sl}, Piedmontese--\emph{pms}, Waray-Waray--\emph{war} (all with about 2 million native speakers), Creole--\emph{ht} (8 million native speakers), and Hindi--\emph{hi} (180 million native speakers). For preprocessing we remove the documents that contain less than 20 different words (stubs) and remove words occur in less than 50 documents as well as the top 100 most frequent words (in each language separately). We represent the documents as normalized TFIDF\cite{Salton88term-weightingapproaches} weighted vectors. These are languages with Wikipedia article sizes comparable to the minority languages.  (since the number of speakers does not directly correlate with the number of Wikipedia articles). The prime hub candidate is the English language which is well aligned with all other Wikipedia languages, although the alignment quality varies quite a bit. Furthermore, we remove the documents that contain less than 20 different words and remove words that are too infrequent as well as the top 100 most frequent words in the vocabularies. Furthermore, we call the document consisting of less than 20 different words, a stub. This documents are typically garbage, the titles of the columns in the table, remains of the parsing process, or Wikipedia articles with very little or no information contained in one or two sentences.
 
@@ -466,6 +468,29 @@ We also have a problem with the quality of the test data. For example, if we loo
 In order to determine how accurately we can predict cluster equivalence we have performed two experiments. In the first experiment we wanted to test how well do the individual approaches for cross-lingual article linking perform when used for linking the clusters about the same event. In the second experiment we tested how accurate is the prediction model when trained on different subsets of learning features. To evaluate the prediction accuracy for a given dataset we used 10-fold cross validation. In this technique, the dataset is partitioned into 10 folds, where 9 folds are used for training a model and the left-out fold is then used to test the accuracy of the model. The learning and testing process is repeated 10 times, each time with a different left-out fold.
 
 In Section~\ref{sec:algorithms} we have described three main algorithms for identifying similar articles in different languages. These algorithms were $k$-means, LSI and CCA. To test which of these algorithms performs best we performed the following test. Using each algorithm, we analyzed all articles in Event Registry to find the most similar articles in other languages. The values of the cross-lingual article linking features (\texttt{linkCount} and \texttt{avgSimScore}) were then recomputed for all annotated learning examples. A dataset with only these two features and the label was constructed and used to test how accurate prediction models can be induced using the data. The results of the experiment are shown in Table~\ref{table:linkingEvalAlgos}. The table shows for each of the algorithms the obtained classification accuracy, precision and recall. We can see that the most informative features for cluster linking are obtained using the CCA algorithm, while $k$-means performs the worse. {\oldText{TODO:} add some explanation why this might be so.}
+\emph{Andrej adds some tests, new experiment description graphs, and explanations for performance, done by Monday}
+%15000 test documents, around 300 000 sth training documents
+%Results for feature spaces of dimensions 500, 800, 1000  overfitting, 800 minor improvement
+%Timex complexity of similarity computation scales linearly with dimension space. We double numbers of articles and decrease memory requirements by 1/2.
+%CCA       CA          AUC         Prec        Recall
+%CCA =     [0.7882      0.8504      0.7692	   0.8209
+%           0.7957      0.8624      0.7788      0.8234
+%           0.8031      0.8654      0.8015      0.8035];
+%LSIS=     [0.7994      0.8627      0.7778      0.8358
+%           0.7956      0.8634      0.7828      0.8159
+%           0.7994      0.8642      0.8030      0.7910];
+%LSIW=     [0.7894      0.8606      0.7673      0.8284;
+%           0.7870      0.8632      0.7662      0.8234;
+%           0.8018      0.8663      0.7854      0.8284];
+
+%AMPR as function of the number of feature vectors
+%500 is good, 800 better, 1000 overfitting, noise!
+\includegraphics{slika.png}
+%Why the hub approach?
+%Optimize for language pairs in the system that have the largest number of articles in the system!
+%Is star CCA really the best???
+%Maybe omit this table?
+
 
 In the second experiment we wanted to evaluate how relevant individual groups of features are to correctly determine cluster equivalence. For this purpose we tested the accuracies obtained using individual groups of features, as well as using different combination of groups. Since we found the CCA to perform best of the three algorithms, we used it to compute the values of the cross-lingual article linking features. Results of the evaluation are shown in Table\~ref{table:linkingEval}. We can see that using a single group of features, the highest prediction accuracy can be achieved using the concept related features. The classification accuracy in this case is 88.8\%. By additionally including also the cross-lingual article linking features, the classification accuracy rises slightly to 89.2\%. Using all three groups of features, the achieved accuracy is 89.6\%.
 Based on the results we can make the following conclusions. The cross-lingual similarity algorithms provide valuable information that can be used to identify clusters that describe the same event in different languages. The computed features are however significantly less informative compared to the features computed on the annotated concepts. Nevertheless, the cross-lingual article similarity features are very important for two reasons. The first reason is that they allow us to identify for a given cluster a limited set of candidate clusters that are potentially equivalent. This is a very important feature since it reduces the search space for several orders of magnitude. The second reason for the importance of these features is that concept annotations are not available for all articles. Annotation of news articles is computationally intensive and can only be done for a subset of collected articles.
@@ -509,8 +534,9 @@ Based on the results we can make the following conclusions. The cross-lingual si
 
 
 \subsection{Scaling}
-
+\emph{Andrej asks who is the rest? I think that this section should be short.}
 100 languages!
+%Newsfeed volume
 Describe the newsfeed volume, number of events and the number of similarities that need to be computed. Compare the memory requirements of our current implementation to the rest.
 Comment on the caching gains in our implementation.
 
